attempt to fix nav alignment options in editor

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -156,8 +156,6 @@ footer p {
   z-index:1;
   position: relative;
   padding-top: 16px;
-  min-width: 50%;
-  float: right;
 }
 
 .widget.extendednavigation a.pull {
